tests/sksl/errors/MatrixToVectorCastTooSmall.glsl
### Compilation failed:

error: 4: 'half2x2' is not a valid parameter to 'half' constructor
error: 5: 'half2x2' is not a valid parameter to 'half2' constructor
error: 6: 'half2x2' is not a valid parameter to 'half3' constructor
3 errors
